<resources>
    <string name="google_maps_key">AIzaSyAK7N4kOTSAWpSlzoOQk9_dKp9Sci2sshY</string>

    <string name="app_name">HayStack-63d RD</string>
    <string name="name_or_email">Name or Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="signup">Signup</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="soldier_dod_civilian_registration">SOLDIER/DoD CIVILIAN REGISTRATION</string>
    <string name="or">OR</string>
    <string name="spouse_registration">Spouse/dependent registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="dod_id">DOD ID</string>
    <string name="govt_email_address">Govt Email Address</string>
    <string name="terms_and_condition">By selecting this box, you certify that the following is true. I certify that i am an authorized individual to access information in the HayStack Army platform</string>
    <string name="accept_terms">I accept Terms Conditions</string>
    <string name="sign_up">Signup</string>
    <string name="relationship_to_sm">Relationship to SM</string>
    <string name="email_address">Email Address</string>
    <string name="username">User Name</string>
    <string name="sponsors_govt_email_address">Sponsors Govt Email Address</string>
    <string name="content_description">Inspect</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_registered_email">Enter Your Register Email</string>
    <string name="full_name">Full Name</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Your Description here...</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="terms_and_condition_title">Terms And Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="spreadthelove">#spreadthelove</string>
    <string name="mobile">Enter Mobile Number</string>
    <string name="referNow">Refer Now</string>
    <string name="event_manag">Event Management</string>
    <string name="people_4_">People (3)</string>
    <string name="jone_kene">Jone Kene</string>
    <string name="jonekene_ma">Jonekene@mail.com</string>
    <string name="some_id">91+502456 251356</string>
    <string name="haystack">HayStack</string>
    <string name="search_for_an_event">Search for an Event</string>
    <string name="thursday_06">Thursday,06 May</string>
    <string name="banglore_in">Bangalore, India</string>
    <string name="popular_eve">Popular Event</string>
    <string name="create_new_group">Create New Group</string>
    <string name="city">City</string>
    <string name="event_name">Event Name</string>
    <string name="street_address">Street Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="state">State</string>
    <string name="host_name">Host Name</string>
    <string name="contact_info">Contact Info(Phone/Email)</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="clock_time">10:00</string>
    <string name="event_descr">Event Description</string>
    <string name="create_the_event">Create the Event</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="add_member">Add Member</string>
    <string name="choose_from_address_book">Choose From Address Book</string>
    <string name="edit_member_details">Edit Member Details</string>
    <string name="art_crafts">Art Cratft</string>
    <string name="please_choose">Please choose the category that event best fits</string>
    <string name="invite">Invite</string>
    <string name="how_would_y">how would you like to Advertise your event?</string>
    <string name="would_you">Would you like host contact info?</string>
    <string name="_private">Private</string>
    <string name="_public">Public</string>
    <string name="_continue">Continue</string>
    <string name="add_from_group">Add From Group</string>
    <string name="publish">Publish</string>
    <string name="congrats">Congratulations</string>
    <string name="your_event_">Your event has been published</string>
    <string name="create_another_event">create Another Event</string>
    <string name="close">Close</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="attend">Attend</string>
    <string name="interested">Interested</string>
    <string name="not_interested">Not Interested</string>
    <string name="radius">Radius</string>
    <string name="manual_search">Manual Search</string>
    <string name="host_number">Host Number</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="log_in">Log In</string>
    <string name="login_credential_validating">Username and Password are validating, please wait...</string>
    <string name="date_picker">MATERIAL_DATE_PICKER</string>
    <string name="time_picker">MATERIAL_TIME_PICKER</string>
    <string name="country">Country</string>
    <string name="package_">package</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="upload_from">Upload From</string>
    <string name="nationwide">Nationwide</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="select_state">Select Your State</string>
    <string name="enter_your_zipcode">Enter Zipcode</string>
    <string name="search_event_location">Search Event Location...</string>
    <string name="select_city">Enter City</string>
    <string name="no_more_events">No more Events</string>
    <string name="skip">Skip</string>
    <string name="restart">Restart</string>
    <string name="update_downloaded">Update Downloaded</string>
    <string name="channel_id">com.android.app.`in`.hystack_army.service.notification</string>
    <string name="update_event">Update Event</string>
    <string name="inspect">Inspect</string>
    <string name="interest">Interest</string>
    <string name="my_events">My Events</string>
    <string name="location_not_detected">Location Not Detected</string>
    <string name="reference_mailId">Referance mail id</string>
</resources>