<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintAddMember"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAddMember"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_left"
        app:titleTextColor="@color/black"
        app:navigationIconTint="@color/black"
        app:title="Add Member"
        app:titleCentered="true"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAddMember">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_24dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/logoWidth"
                android:layout_height="@dimen/logoHeight"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/inspect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginLarge"
                android:background="@android:color/transparent"
                android:fontFamily="@font/lato"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:singleLine="true"
                android:textSize="@dimen/font_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                android:autofillHints="" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:alpha="0.5"
                android:background="@color/colorBottomLine"
                app:layout_constraintEnd_toEndOf="@+id/inputName"
                app:layout_constraintStart_toStartOf="@+id/inputName"
                app:layout_constraintTop_toBottomOf="@+id/inputName" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginLarge"
                android:background="@android:color/transparent"
                android:fontFamily="@font/lato"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="@dimen/font_16sp"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:autofillHints="" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:alpha="0.5"
                android:background="@color/colorBottomLine"
                app:layout_constraintEnd_toEndOf="@+id/inputName"
                app:layout_constraintStart_toStartOf="@+id/inputName"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginLarge"
                android:background="@android:color/transparent"
                android:fontFamily="@font/lato"
                android:hint="@string/mobile"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="@dimen/font_16sp"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                android:autofillHints="" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:alpha="0.5"
                android:background="@color/colorBottomLine"
                app:layout_constraintEnd_toEndOf="@+id/inputMobile"
                app:layout_constraintStart_toStartOf="@+id/inputMobile"
                app:layout_constraintTop_toBottomOf="@+id/inputMobile"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddFromGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/add_from_group"
                android:textAllCaps="false"
                android:padding="@dimen/padding12dp"
                android:layout_marginTop="@dimen/margin_24dp"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChooseFromAddressBook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/choose_from_address_book"
                android:textAllCaps="false"
                android:fontFamily="@font/lato_bold"
                android:padding="@dimen/padding_12dp"
                android:layout_marginTop="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="@+id/btnAddFromGroup"
                app:layout_constraintStart_toStartOf="@+id/btnAddFromGroup"
                app:layout_constraintTop_toBottomOf="@+id/btnAddFromGroup" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnInvite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:padding="@dimen/padding_12dp"
                android:text="@string/invite"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="@+id/btnChooseFromAddressBook"
                app:layout_constraintStart_toStartOf="@+id/btnChooseFromAddressBook"
                app:layout_constraintTop_toBottomOf="@+id/btnChooseFromAddressBook" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSkip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:padding="@dimen/padding_12dp"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="@+id/btnInvite"
                app:layout_constraintStart_toStartOf="@+id/btnInvite"
                app:layout_constraintTop_toBottomOf="@+id/btnInvite" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>